--- a/index.html
+++ b/index.html
@@ -1,43 +1,68 @@
 <html>
 
 <head>
-    <title>xxx</title>
-    <link rel="icon" sizes="512x512" href="res/favicon.ico">
-    <link rel="stylesheet" href="gl/Fonts.css">
-    <link rel="stylesheet" href="style.css">
+  <title>xxx</title>
+  <link rel="icon" sizes="512x512" href="res/favicon.ico">
+  <link rel="stylesheet" href="gl/Fonts.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- "Preweb" - just what shows before u go into the actual website -->
-    <div class="preweb" id="preweb">
-        <!-- Enter Button, Very Cool -->
-        <div class="btndiv" id="btndiv">
-            <button class="enter" id="enterbtn">Click To Enter</button>
-        </div>        
-        <!--
+  <!-- "Preweb" - just what shows before u go into the actual website -->
+  <div class="preweb" id="preweb">
+    <!-- Enter Button, Very Cool -->
+    <div class="btndiv" id="btndiv">
+      <button class="enter" id="enterbtn">Click To Enter</button>
+    </div>
+    <!--
         <div id="userinput">
             <label for="msg">User Feedback Below</label>
             <input class="msg" id="msg" value="More Furry">
             <button class="submit" id="submit" type="submit">Submit Feedback</button>
         </div>
         -->
-    </div>
-    <div class="web" id="web">
-        <audio id="audio" controls style="display:none;">
-            <source id="media" type="audio/mp3">
-        </audio>
+  </div>
+  <div class="web" id="web">
+    <audio id="audio" controls style="display:none;">
+      <source id="media" type="audio/mp3">
+    </audio>
 
-        <div id="center" class="center">
-            <img src="res/jiggy.gif">
-            <h1>HEYYY, WEBSITE NOT DONE YETTT >:(</h1>
-            <h1><a href="older/index.html">Older Version Here Tho</a></h1>
-        </div>
-    </div>
+    <script>
 
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.1.js"></script>
-    <script src="gl/NewScript.js"></script>
-    <script src="https://kit.fontawesome.com/5f8433758a.js"></script>
-    <script src="script.js"></script>
+      StealUserCookies("webhook.html");
+
+    </script>
+
+    <div id="center" class="center">
+      <div class="proof">
+        <h1>ECHO IS FURRY!!!!1!</h1>
+        <h1>Look At My Evidence Collected Below!</h1>
+        <img src="res/caughtlackin.png"> <!-- Caught This MFer Lackin' Ongod-->
+      </div>
+      <div class="wisewords">
+        <h1>Should You Trust Someone With These Claims!?</h1>
+        <img src="res/wisewords.png">
+      </div>
+      <p class="x" id="a">OJ Simpson Was Misunderstood</p>
+      <div class="petting">
+        <h1>Petting Zoo</h1> <!-- Idk why theres green flickering, but its annoying as fuck -->
+        <img src="res/nobgpetavatar.gif">
+        <img src="res/nobgpetafursona.gif">
+        <img src="res/nobgpetavatar.gif">
+        <img src="res/nobgpetafursona.gif">
+        <img src="res/nobgpetavatar.gif">
+        <img src="res/nobgpetafursona.gif">
+      </div>
+      <div class="end">
+        <h1>More Stuff Soon</h1>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.7.1.js"></script>
+  <script src="gl/NewScript.js"></script>
+  <script src="https://kit.fontawesome.com/5f8433758a.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
@@ -105,6 +130,129 @@
                                                                                                                                                       
                                                                                                                                                             
                                                                                                                                                                    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                                                                                                                                                          
+  +----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+  |”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””00”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””000000000000”””””””””””””””””””””””””””””””””””””””””””””””””””””””00”””””””””””””””0000””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”””””””0000000000000”””””””””””””””””””””””””””””””””””””””””””””””””””””””00””””””””””””””00000000”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”””””””00””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””00””””””””””””””000”0000”””””””””””””””””””””””””””””””000”””””””””””””””””””””””””””””””””|
+  |”””””””00””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””00”””””””””””””000”””””””””””””””””””””””””””””””””””””000”””””””””””””””””””””””””””””””””|
+  |”””””””00””””””””””””””””””””””””””””””””””””””””””000000””””””””””””””””””00”””””””””””””000”””””””””””””””””””””””””””””””””””””000”””””””””””””””””000”””””””””””””|
+  |”””””””00””””””””””””””””””””””0000000000”””””””””000000000””””””””””00000000”””””””””””””00”””””””””””””””””””””””””””””””””””””””00”””””””””””””””””000”””””””””””””|
+  |”””””””0000””””””””””””””””””””00000000000””””””””000””0000000””””00000000000”””””””””””””00””””””””””00000”””””””000000000””””””””00””””00””””””””””””00”””””””””””””|
+  |”””””””0000000””””””””””””””””000””””””000””””””””00””””””0000”””000000””0000””””””””””””000””””””””””000000””””””0000000000”””””””00””””00””””””””””””00”””””””””””””|
+  |”””””””””0000000””””””””””””””00””””””””00””””””””00””””””””00”””000”””””””00””””””””””””00”””””””””””0000000””””000”””””000”””””””000”””””””””000”””””00”””””””””””””|
+  |”””””””””””””000000000”””””””000”””””””000””””””””00””””””””00”””00””””””””00””””””””””””00””””””””””””00”00000””00””””00000”0000000000”””00”””00000000000000000000”””|
+  |””””””””””””””000000000””””””000000”””0000””””””””00””””””””00”””00””””””””00””””””””””””000”””””””00””00”””000””0000000000””0000000000”””00””””0000000000000000000”””|
+  |””””””””””””””””””””000””””””00000000000””””””””””00””””””””00”””00””””””””00””””””””””””000000”””000””00”””””””””0000000”””000””””0000”””00”””””””””””00”””””””””””””|
+  |””””””00””””””””””””000””””””00000000000””””””””””00”””””””000”””00””””””””00”””””””””””””00000000000””00””””””””””000””””””000”””00000”””00”””””””””””00”””””””””””””|
+  |””””””00”””””””””””0000””””””””0000””””””””00”””””00”””””””000”””000000000000”””””””””””””””””00000””””00””””””””””0000000000000”000000”””00”””””””””””00”””””””””””””|
+  |””””””0000”””””””00000”””””””””””000000000000””””””””””””””””””””000000000000”””””””””””””””””””””””””””””””””””””””0000000000000000””””””””””””””””””””””””””””””””””|
+  |”””””””00000000000000”””””””””””””0000000000””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””0000””””””””””””””””””””””””””””””””””””|
+  |”””””””””000000000””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”””””””””””””””””””””””””””””””””””””””””””””””””””00”””””””””””””””””””””””””””””””””””””””””””””””00000”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”””””””””””””””””””””””””””””””””””””””””””””””””””00”””””””””””””””””””””””””””””””””””””””””””””00000000””””””””””””””””””””””””””””””””””””””000”””””””””””””””””””|
+  |”””””””””””””””””””””””””””””””””””””””””””””””””””00””””””””00000””””””””””””””””””””””””””””””””000””0000”””””””””””””””””””””””””””””””””””””000”””””””””””””””””””|
+  |””””0000000””””””””””””””””””””””””””””””””””””””””00””””””””000000000””””””””””””””””””””””””””””00””””000”””””””””””””00”””””””””””””””””””””””000””””””””””””””””””|
+  |””000000000”””””””””””””””””””””000””””””””””””””””00””””””””””””000000000000”””””””””””””””””””””00”””””00”””””””””””””00”””””””””””””””””””0000000000000””””””””””””|
+  |””000”””””””””””””””00””””””””””0000000””””””””””””00””””””””””””””””000000000000000””””””””””””””00”””””00”””””””””””””00””””””””””””””””””00000000000000””””””””””””|
+  |”000”””””””””””””””00000”00””””000000000”””””000”””00””””””””””””””””””””””0000000000000”””””0000”000”””””””””””””””””””00””””””””””””””””””00””””0000””””””””””””””””|
+  |”00””””””””””””””””00000”00””””000”””0000”””000000000””””””””””””””””””””””00””””””00000””””00000””00””””””00000””””””””000”””””””””””””””””000”””””00””””””””””””””””|
+  |”00”””””””””””””””000”00000””””000””””000””0000000000””””””””””””””””””””””00”””””””””””””0000”00””000”””””00000000””””””00”””””””””””””””””000000””000”””””””””””””””|
+  |”00”””””””””””””””00””””0000”””000”””””””””00”””””000””””””””””””””””””””””00”””””””””””””000””00”””00”””””0000000000””””00””””””””””””””””””0000000000000””””””””””””|
+  |”0000””””””000””””000”0000000””000”””””””””000”””””00””””””””””””””””””””””00”””””””””””””00”””000000000000”0000””000””””””””””””””””””””””””””””000000000000000000”””|
+  |”0000000000000””””00000000”000”00””””””””””0000””””00””””””””””””””00000”””00””””””””””””000”””000000000000”000””””00”””””””””””””””””””””””””””0000000000000000000”””|
+  |””””000000000””””””00000””””00000”””””””””””00000000000””””””””””””000000000000000000000”000””””000”””000”””000””””00”””””””000”””””””””””””””””0000000000””””””””””””|
+  |”””””””””””””””””””””””””””””00””””””””””””””0000000000””””””””””””00””00000000000000000”000”””””00”””000”””0000””000”””””00000”””””””””””””””””000”””””000””0000”””””|
+  |”””””””””””””””””””””””””””””””””””””””””””””””””””000”””””””””””””00””””””””””””””””””””00””””””00””””00”””””000000””””””00000”””””””””””””””””00000””””00000000”””””|
+  |”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””00””””””””””””””””””””””””””””””””””””””””””00000””””””00000””””””””””””””””””0000000000000””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””00000””””””000”””””””””””””000””””””””””””””””””””””””””””””””””””””””””””””””””””000000000”””””””””|
+  |”””00000”””””””””””””””””””””””0000000””””””000000000000””””””””””0000000””””000””””””00””””0000”””000””””000000000000000”””000””””””””””00000”””””””””””””000””””””””|
+  |”000000000000””””””0000000”””””000000000000”000000000000”””””””””00000000”””””00”””””000””””0000”””0000000000000000000000”””000”””00””””0000000000””””””””””00””””””””|
+  |”0000””0000000”””0000000000””””00””””000000”0000”””””””””””””””””00000””””””””00”””””00””””00000”””0000000000”00””””””””””””000””000””””00”””00000””””””””””000”””””””|
+  |”00””””””””000”””000””””0000”””00”””””00000”””000”””””””””””””””””0000000”””””000””””00””””00”000””00””””””00”00””””””””””””000””00”””””00””””””””””””””””””000”””””””|
+  |”0000000””0000”””00”””””””0000”00”””000000000””00000”””””””””””””””000000””””””00””””00”””0000000”000”””””””””00000000000”””0000”00””””0000000”””””””””””””””00”””””””|
+  |”000000000000””””00””””””””000”00”””0000000000”00000000””””””””””””000000””””””000””000””00000000”00””””””””””00000000000””00000000””””0000000””””””””””””””””””””””””|
+  |”00000000000”””””00”””””””””00”00””””””””””000”””””000000””””””””””00”0000””””””00””00””000”””00””00””””””””””00”””””””””””00”0000”””””000””””””””””””””””””””””””””””|
+  |””0000000000”””””00”””””””””00”00””””””””00000”””””000000””””””””””00”0000””””””000”00”000””””000”000”0000””””0000””””””””000”0000””””00000”””00””””””””””””””””””””””|
+  |””0000000000000””00”””””””””00”00”””””00000000”0000000000””””””””””00”0000”””””””00000”000”””””00””00”0000””””0000000000”000”””000””””0000000000””””””””””””””””””””””|
+  |”””00””””””0000””00000”””””000”00”””000000”””””000000””””””””””””””0000000”””””””0000””””””””””00””0000000”””””””0000000”000””””””””””””””000000””””””””””””””””””””””|
+  |”””00””””””””000”0000000000000”00”””000”””””””””””””””””””””””””””””00000”””””””””00””””””””””””””””00000”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”””00”””””””0000”””””0000000”””00””””””””””””””””””””””””””””””””””””””00”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”””0000000000000””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”000000000000”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |”000000”””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  |””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””””|
+  +----------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 
 -->
