--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
 
 <head>
-  <title>xxx</title>
+  <meta property="og:site_name" content="t.co/pAiKdjX1US">
+  <meta property="og:site_name" content="Echo Awareness">
+  <meta property="og:title" content="Echo Awareness">
+  <meta property="og:description"
+      content="He is echo, but find out the dark truth about him here! Echo Awareness provides the juciy details.">
+  <title>Echo Awareness</title>
   <link rel="icon" sizes="512x512" href="res/favicon.ico">
   <link rel="stylesheet" href="gl/Fonts.css">
   <link rel="stylesheet" href="style.css">
