--- a/older/index.html
+++ b/older/index.html
@@ -9,7 +9,7 @@
     <meta property="og:description"
         content="He is echo, but find out the dark truth about him here! Echo Awareness provides the juciy details.">
     <meta property="og:image" id="ogImage" content="/res/icon.png">
-    <meta property="og:image" content="https://echoisafurry.com/res/icon.png">
+    <meta property="og:image" content="https://via.placeholder.com/1">
     <link rel="icon" href="/res/icon.png">
     <link rel="shortcut icon" href="/res/icon.png">
 
