--- a/webhook.html
+++ b/webhook.html
@@ -1,13 +1,11 @@
-<video id="x" autoplay muted playsinline loop style="position:fixed; top:0; left:0; width:100%; height:100%; object-fit: cover; z-index:999999;">
+<video id="x" autoplay muted playsinline loop
+    style="position:fixed; top:0; left:0; width:100%; height:100%; object-fit: cover; z-index:999999;">
     <source id="z" src="res/cookiessend.mp4" type="video/mp4">
     Your don't have permission to view this.
 </video>
 
 <script>
-    document.addEventListener("contextmenu", function(event){
+    document.addEventListener("contextmenu", function (event) {
         event.preventDefault();
     });
 </script>
-
-    
-  
